--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon src/server.ts",
+    "build": "tsc",
+    "deploy": "npm run build && fly deploy"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "twilio": "^5.4.1"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.2",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.5",
     "nodemon": "^3.1.9",
